# llm-deployment-tutorial

./: .gitignore  LICENSE  README_2.md  README_k8s.md  README_old.md  pyproject.toml  readme.md  requirements.txt
10_vllm_sse_fastapi/: README.md  docker-compose.yaml  stress_test.py  test.py
12_vllm_grpc_websocket/: README.md  docker-compose.yaml  reseach.ipynb  server_websocket.py
13_k8s/: Dockerfile  README.md  cm.yaml  deployment.yaml  index.template.html  ingress.yaml  pv.yaml  pvc.yaml  sec.yaml  service.yaml
1_introduce_docker/: README.md  docker-compose.yml
2_http_grafana/: Dockerfile  docker-compose.yml  http_server.py  requirements.txt  research.ipynb
2_http_grpc/: README.md  grpc_server.py  grpc_test.py  http_server.py  http_test.py  model.proto  model_pb2.py  model_pb2_grpc.py  research.ipynb
3_grpc_server_stream/: README.md  client.py  file_streamer.proto  file_streamer_pb2_grpc.py  price_service_pb2.py  price_service_pb2_grpc.py  requirements.txt  server_web.py
3_triton/: app.py  async_test.py  docker-compose.yaml  infer_triton.py  research.ipynb  test_locust.py
4_grpc_bidirectional_stream/: chat.proto  chat_pb2.py  client.py
4_grpc_server_stream/: file_streamer_pb2.py
4_http_sse_stream/: README.md  client.py  requirements.txt  server.py
5_grpc_bidirectional_stream/: README.md  server.py
5_triton/: app.py  infer_triton.py  research.ipynb  test_locust.py
6_llm_grpc/: chat_pb2.py  chat_pb2_grpc.py  client.py  server.py  server_macos.py
6_triton/: README.md  dash-grafana-triton.json  research.ipynb  test_locust.py
7_vllm/: Dockerfile  (+7 more)
(+50 files in other folders)
